<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.clementlevallois</groupId>
    <artifactId>AsciiiDocMavenJavaSE</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <properties>
        <!--common properties-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
        <asciidoctor.maven.plugin.version>2.2.2</asciidoctor.maven.plugin.version>
        <asciidoctorj.version>2.5.4</asciidoctorj.version>
        <jruby.version>9.2.13.0</jruby.version>
        
        <asciidoctorj.pdf.version>2.3.0</asciidoctorj.pdf.version>
        <revealjs.version>3.9.2</revealjs.version>
        <asciidoctor-revealjs.version>3.1.0</asciidoctor-revealjs.version>
        <mainDirectory>${project}</mainDirectory>
       
        <source.directory>${basedir}/src/main/asciidoc</source.directory>
        <image.directory>../images</image.directory>
        
        <!--to run just one file uncomment these lines-->
<!--        <doc.to.process>text-mining-for-business.adoc</doc.to.process>
        <doc.to.process.full.path>en/${doc.to.process}</doc.to.process.full.path>-->
        
        <!--true and false values don't go well with Maven?? So please use yes or no-->
        <refresh.pics>no</refresh.pics>

    </properties>

    <modules>
        <module>asciidoctorj-extensions</module>
        <!--<module>MojoPublishToMedium</module>-->
        <!--<module>../gephi tutorials/docs/</module>-->
        <!--<module>../codapps/docs/</module>-->
        <!--<module>../blog/docs/</module>-->
        <!--<module>../4D/docs/</module>-->
        <!--<module>../linux security tutorials/docs/</module>-->
        <!--<module>../gephi scientometrics training/docs/</module>-->
        <!--<module>../vosviewer tutorials/docs/</module>-->
        <module>../mk99/docs/</module>
        <!--<module>../sociobiology/docs/</module>-->
        <!--<module>../IoT for entrepreneurs/docs/</module>-->
        <!--<module>../compiler for single docs/docs/</module>-->
    </modules>
    <build>
        <plugins>
            <plugin>
                <groupId>org.commonjava.maven.plugins</groupId>
                <artifactId>directory-maven-plugin</artifactId>
                <version>1.0</version>
                <executions>
                    <execution>
                        <id>directories</id>
                        <goals>
                            <goal>directory-of</goal>
                        </goals>
                        <phase>initialize</phase>
                        <configuration>
                            <property>myproject.basedir</property>
                            <project>
                                <groupId>net.clementlevallois</groupId>
                                <artifactId>AsciiiDocMavenJavaSE</artifactId>
                            </project>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
